2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-themes.c: (theme_thumbnail_func): Don't free data we don't own.
	Prevents crash when changing themes.

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init), (theme_thumbnail_generate),
	(theme_thumbnail_func): fix asynchronous thumbnail generation

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: Add colour scheme functions

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: fix duplicate mnemonic

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): refix button name, too

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): fix gcc 2 build again (bad thos)

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (appearance_window_response):
	* appearance.glade: use predefined GTK constants for reponse ids

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-themes.c: (themes_init), (theme_changed_func): Use asynchronous
	methods to generate thumbnails.

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (cb_details_response), (cb_show_details):
	now we parse the entire glade file at startup, there's no need to
	reparse it for the font details dialog

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): update button name, declare
	variables at beginning of block
	* appearance.glade: fix button group assignment (again)

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_free): don't leak the WPItems

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-themes.c: (themes_init), (theme_changed_func),
	(theme_selection_changed_cb), (theme_custom_cb):
	- Sort metathemes icon view
	- Apply theme on selection change
	- Use theme name rather than display name to apply theme

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-main.c: (init_appearance_data):