@@ -1,3 +1,8 @@
+2007-05-13  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (theme_thumbnail_func): unref the thumbnail when
+	we're done with it
+
 2007-05-13  Thomas Wood  <thos@gnome.org>
 
 	* appearance-themes.c: (theme_thumbnail_func): Don't free data we don't own.
